--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,7 +1,52 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+nav{
+    margin-top: 0px;
+    padding: 20px;
+    background-color: #2081c3;;
+    align-items: center;
+    color: white;
+}
+
+.beer-image{
+    width: 400px;
+    height: auto;
+}
+
+a{
+    margin-right: 50px;
+}
+
+p{
+    justify-content: center;
+    text-align: center;
+}
+
+img{
+padding-left: 50px;    
+padding-top: 40px;
+height: 200px;
+width: auto;
+position: relative;
+}
+
+button{
+
+padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: 25px;
+    border-radius: 3px;
+}
+
+
 /*
 white: #f7f9f9;
 light-blue: #2081c3;
-dark-blue: #0a2c42;
+
 grey: #bfbfbf;
-font-family: Arial, Helvetica, sans-serif;
+font-family: 
 */
