--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <title>Document</title>
+</head>
+<body>
+
 <div>
 
+<img class="beer-image" src="/images/beer.png">
+
+<button onclick="window.location.href='/beers';">Check the Beers!</button>
+<button onclick="window.location.href='/random-beer';">Check a Random Beer!</button>
+
+<link rel="stylesheet" href="style.css">
+
 </div>
+    
+</body>
+</html>
+
+
+
